<resources>
    <string name="app_name">Call</string>

    <!-- Initial server setup -->
    <string name="initial_server_addr_hint">Server Address or Name</string>
    <string name="initial_server_addr_command">Command Port Number</string>
    <string name="initial_server_addr_media">Media Port Number</string>
    <string name="initial_server_sodium_certificate">Server Sodium Public Key</string>
    <string name="initial_server_title">Server Information</string>
    <string name="initial_server_image_accessibility">Server picture from Fedora Linux</string>
    <string name="initial_server_got_server_public">Public key OK</string>
    <string name="initial_server_write_server_public_exception">Cannot write public key. Check ADB.</string>

    <!-- Initial user setup -->
    <string name="initial_user_title">User Information</string>
    <string name="initial_user_uname_hint">Name (CASE SENSITIVE)</string>
    <string name="initial_user_private_key_hint">Private Sodium Key</string>
    <string name="initial_user_image_accessibility">Faceless user picture from Fedora Linux</string>
    <string name="initial_user_got_user_private">Private key OK</string>
    <string name="initial_user_write_user_private_exception">Cannot write private key. Check ADB.</string>

    <!-- Progress dialog messages -->
    <string name="progress_login">Dialing in &#8230;</string>

    <!-- File picker messages -->
    <string name="file_picker_server_sodium_public">Server\'s Expected Sodium Public Key</string>
    <string name="file_picker_user_public">\'s Expected Public Key</string>
    <string name="file_picker_user_private">Your Private Key</string>

    <!-- Dialog Messages (not screen specific) -->
    <string name="alert_ok">OK</string>
    <string name="alert_login_failed">Login failed</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_technical_difficulties">Currently experiencing technical difficulties. Check DB Logs if possible.</string>
    <string name="alert_corrupted_cert">Certificate file corrupted. Can\'t use.</string>
    <string name="alert_corrupted_key">Key file corrupted. Can\'t use.</string>
    <string name="alert_storage_perm">Storage permission is required to open your private for logging on, the server\'s public key to verify it, and anybody else\'s public key you want to manually enter.</string>

    <!-- Dialog Messages (screen specific) -->
    <string name="alert_initial_server_no_caja">No file explorers installed on your device</string>
    <string name="alert_initial_server_incomplete_server">Incomplete server information</string>
    <string name="alert_initial_server_invalid_port">Port # must be between 1 and 65535</string>
    <string name="alert_initial_user_missing_uinfo">Missing username or private key.</string>
    <string name="alert_initial_user_cert_not_match">Server\'s certificate DOES NOT MATCH the expected. DO NOT continue.</string>
    <string name="alert_user_home_duplicate">Contact already exists</string>
    <string name="alert_user_home_contact_notexist">User does not exist</string>
    <string name="alert_user_home_rename_instructions">Enter a nickname for CONTACT</string>
    <string name="alert_user_home_rename_button_ch">Set</string>
    <string name="alert_user_home_rename_button_nvm">Cancel</string>
    <string name="alert_user_home_cant_dial">User is not available to call</string>
    <string name="alert_user_home_no_internet">No internet connection. Can\'t login.</string>
    <string name="alert_user_home_mic_perm">Call does not have permission to use the microphone. It won\'t be much of a call if the other person can\'t hear you.</string>
    <string name="alert_user_home_storage_denied_warning">With storage permission denied, you will not be able to change your private key or the expected server public key.</string>
    <string name="alert_user_home_really_quit">Are you sure you want to quit? People will not be able to call you.</string>
    <string name="alert_user_home_ignore_batter_savings_explain">Batter savings optimizations will kill internet access when the phone is not in use. This means you will only be able to make calls while using or shortly after using your phone. Battery optimizations need to be disabled.</string>

    <!-- Persistent popup statuses -->
    <string name="state_popup_idle">Signed In</string>
    <string name="state_popup_incoming">Incoming Call</string>
    <string name="state_popup_init">Dialing Out</string>
    <string name="state_popup_incall">In Call</string>
    <string name="state_popup_offline">Offline</string>

    <!-- User home screen -->
    <string name="user_home_actionbox_hint">Choose someone to call</string>
    <string name="user_home_contacts_header">My Contacts</string>
    <string name="user_home_title">Main</string>

    <!-- Main call screen -->
    <string name="call_main_title">Voice Call</string>
    <string name="call_main_status_ringing">Ringing</string>
    <string name="call_main_status_incall">In Call</string>
    <string name="call_main_toast_micstatus">DOUBLE CHECK mic button icon. It can take up to 1 second to change mute/unmute.</string>
    <string name="call_main_noise_reduction">Noise</string>
    <string name="call_main_echo_cancel">Echo</string>
    <string name="call_main_stats">Stats</string>
    <string name="call_main_stat_mia">Missing</string>
    <string name="call_main_stat_tx">Out</string>
    <string name="call_main_stat_rx">In</string>
    <string name="call_main_stat_garbage">Garbage</string>
    <string name="call_main_stat_tx_seq">Out#</string>
    <string name="call_main_stat_rx_seq">In#</string>
    <string name="call_main_stat_skipped">Skipped</string>
    <string name="call_main_stat_oorange">!!Range</string>

    <!-- Incoming call screen -->
    <string name="call_incoming_title">Incoming Call</string>

    <!-- Logs screen -->
    <string name="log_viewer_title">Log Viewer</string>
    <string name="log_viewer_reset">Clear Logs</string>
    <string name="log_viewer_enable">Enable DB logs</string>
    <string name="log_viewer_more">+Logs</string>

    <!-- Log details screen -->
    <string name="log_details_title">Log Details</string>
    <string name="log_details_date_label"><b>Date:</b></string>
    <string name="log_details_tag_label"><b>Tag:</b></string>
    <string name="log_details_label_time"><b>Time:</b></string>

    <!-- About this app screen -->
    <string name="about_title">App Info</string>
    <string name="about_desc">Android client for Daniel Tjandra call server.\n
        Forces TLS 1.2, trusting only the supplied certificate regardless of its certificate chain.\n
        Uses libsodium for udp voice encryption.</string>
    <string name="about_compile_label">Git:</string>
    <string name="about_compile_revision">d3803db8752ef882c34c261b4651f3c3d7592cc8</string>
    <string name="about_version_label">Version:</string>
    <string name="about_version_number" translatable="false">1.9</string>
    <string name="about_by_label">Credits:</string>
    <string name="about_people">
        Daniel Tjandra (main)\n
        https://material.io/icons/ (icons) \n
        https://github.com/terl/lazysodium-android\n
        Xiph.Org Opus \n
    </string>

    <!-- For menu items that always show an icon, their text can be accessed by long pressing the item -->
    <!-- Menu items that don't have an icon -->
    <string name="menu_main_exit">Sign Out</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_dblogs">DB Logs</string>
    <string name="menu_main_about">App Info</string>
    <string name="menu_main_key_mgmt">Public Keys</string>

    <string name="menu_edit_ok">Save Changes</string>
    <string name="menu_edit_edit">Edit Contact</string>
    <string name="menu_edit_remove">Remove Contact</string>

    <!-- DTSettings stuff and its fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_server_addr_summary">Call server\'s domain name or ip address</string>
    <string name="settings_server_cmd_summary">Port on the server for accepting call commands</string>
    <string name="settings_server_media_summary">Port on the server for accepting call media data</string>
    <string name="settings_server_sodium_summary">Server\'s public sodium key file</string>
    <string name="settings_user_uname_summary">CASE SENSITIVE user account name</string>
    <string name="settings_user_private_key_summary">Your private key for logging in</string>

    <!-- User key management overview screen -->
    <string name="public_key_mgmt_title">Public Key Management</string>

    <!-- User key management details screen-->
    <string name="public_key_deatils_title">Key Details</string>
    <string name="public_key_details_none">No saved key for user</string>
    <string name="public_key_details_saved">New key saved for </string>
    <string name="public_key_details_noperm_fsread">No storage permission. Entering read-only.</string>
    <string name="public_key_details_choose_cert">\'s public key</string>
    <string name="public_key_details_confirm_delete">Do you really want to permanently remove DISPLAYNAME\'s public key from the program?</string>

</resources>
