<?xml version="1.0" encoding="utf-8"?>
<!-- See Const.java PREF_xyz for preference keys-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dt.call.aclient.screens.DTSettings">

    <PreferenceCategory
        android:title="@string/initial_server_title">
        <EditTextPreference
            android:key="server_address"
            android:title="@string/initial_server_addr_hint"
            android:summary="@string/settings_server_addr_summary"
            android:dialogTitle="@string/initial_server_addr_hint"
            />
        <EditTextPreference
            android:key="command_port"
            android:title="@string/initial_server_addr_command"
            android:summary="@string/settings_server_cmd_summary"
            android:dialogTitle="@string/initial_server_addr_command"
            android:inputType="number"
            android:maxLength="5"
            />
        <EditTextPreference
            android:key="media_port"
            android:title="@string/initial_server_addr_media"
            android:summary="@string/settings_server_media_summary"
            android:dialogTitle="@string/initial_server_addr_media"
            android:inputType="number"
            android:maxLength="5"
            />
        <Preference
            android:key="server_sodium_public"
            android:title="@string/initial_server_sodium_certificate"
            android:summary="@string/settings_server_sodium_summary"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/initial_user_title">
        <EditTextPreference
            android:key="username"
            android:title="@string/initial_user_uname_hint"
            android:summary="@string/settings_user_uname_summary"
            android:dialogTitle="@string/initial_user_uname_hint"
            />
        <Preference
            android:key="private_key"
            android:title="@string/initial_user_private_key_hint"
            android:summary="@string/settings_user_private_key_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>
