<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--Hard code titles for always show as they'll never be seen-->
    <item
        android:id="@+id/menu_main_history"
        android:icon="@drawable/ic_history_white_48dp"
        android:title="@string/menu_main_history"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_main_exit"
        android:icon="@drawable/ic_exit_to_app_white_48dp"
        android:title="@string/menu_main_exit"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_main_dblogs"
        android:title="@string/menu_main_dblogs"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_main_settings"
        android:title="@string/menu_main_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_main_about"
        android:title="@string/menu_main_about"
        app:showAsAction="never"
        />

</menu>