<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!--Hard code titles for always show as they'll never be seen-->
    <item
        android:id="@+id/menu_edit_done"
        android:icon="@drawable/ic_done_white_48dp"
        android:title="@string/menu_edit_ok"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_edit_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        android:title="@string/menu_edit_edit"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_edit_rm"
        android:icon="@drawable/ic_delete_white_48dp"
        android:title="@string/menu_edit_remove"
        app:showAsAction="always"
        />
</menu>