<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/log_details_label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_details_date_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/log_details_value_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sunday April 10, 2016"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/log_details_label_date"
        android:layout_toEndOf="@+id/log_details_label_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_details_label_time"
        android:id="@+id/log_details_label_time"
        android:layout_below="@+id/log_details_label_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="21:22:18 EDT"
        android:id="@+id/log_details_value_time"
        android:layout_below="@+id/log_details_value_date"
        android:layout_toRightOf="@+id/log_details_label_time"
        android:layout_toEndOf="@+id/log_details_label_time"/>

    <TextView
        android:id="@+id/log_details_label_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_details_tag_label"
        android:layout_below="@+id/log_details_label_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/log_details_value_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dooms Day"
        android:layout_above="@+id/log_details_value_message"
        android:layout_toRightOf="@+id/log_details_label_date"
        android:layout_toEndOf="@+id/log_details_label_date"/>

    <TextView
        android:id="@+id/log_details_value_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="It's the end of the world!!! Panic immediately!!!"
        android:layout_below="@+id/log_details_label_tag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>